ok button added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script src="logger.js"></script>
   </head>
   <body>
-    Super, działam
+			<div class="cont">
+				<button class="btn"><span>Wyślij</span><img src="https://i.cloudup.com/2ZAX3hVsBE-3000x3000.png" height="62" width="62"></button>
+			</div>
   </body>
 </html>
