added inline ex

--- a/index.html
+++ b/index.html
@@ -21,5 +21,11 @@
         <p style="display: inherit">B</p>
         <p style="display: inherit">C</p>
     </div>
+		<br>
+    <div style="display: inline">
+        <p style="display: inherit">A</p>
+        <p style="display: inherit">B</p>
+        <p style="display: inherit">C</p>
+    </div>
   </body>
 </html>
