--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
     <script src="logger.js"></script>
   </head>
   <body>
-    Super, działam
+		<ul class="flex-container">
+			<li class="flex-item">1</li>
+			<li class="flex-item">2</li>
+			<li class="flex-item">3</li>
+			<li class="flex-item">4</li>
+			<li class="flex-item">5</li>
+			<li class="flex-item">6</li>
+		</ul>
+		
+		<div class="flex-container">
+			<div class="flex-item"><p>Div</p></div>
+			<div class="flex-item"><p>Div</p></div>
+			<div class="flex-item"><p>Div</p></div>
+			<div class="flex-item"><p>Div</p></div>
+			<div class="flex-item"><p>Div</p></div>
+			<div class="flex-item"><p>Div</p></div>
+		</div>
   </body>
 </html>
